manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers:
  - image: ghcr.io/nirmata/github-signing-demo:latest
    name: test-container
