manifests/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sigstore-image-verification
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: sigstore-image-verification
    verifyImages:
    - imageReferences:
      - "*"
      type: SigstoreBundle
      attestors:
      - entries:
        - keyless:
            issuer: https://token.actions.githubusercontent.com
            subject: https://github.com/nirmata/github-signing-demo/.github/workflows/build-attested-image.yaml@refs/heads/main
            rekor:
                url: https://rekor.sigstore.dev
